# cloud-clipboard

./: .dockerignore  .env.example  .env.production  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  CHANGELOG.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.complex  Dockerfile.dev  Dockerfile.rust  Dockerfile.simple  OPTIMIZATION_PLAN.md  README.md  RELEASE_GUIDE.md  RELEASE_IMPLEMENTATION.md  TESTING_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.nginx.yml  docker-compose.yml  eslint.config.js  findings.md  lint-staged.config.js  nginx.conf  package.json  progress.md  task_plan.md  tsconfig.json  version-report.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/hooks/: pre-tool-use.ts
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml  test.yml
.husky/: pre-commit  pre-push
.serena/: project.yml
.specify/memory/: constitution.md
client/: .env.production  index-desktop.html  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.desktop.ts  vite.config.ts  vitest.config.ts
client/public/: site.webmanifest
client/src/: App.tsx  index.css  main-desktop.tsx  main.tsx
client/src/__mocks__/: pwa-register.ts
client/src/components/: ClipboardRoom.tsx  ConnectionStatus.tsx  ErrorBoundary.tsx  LanguageToggle.tsx  MobileNav.tsx  PWAInstallPrompt.tsx  PWAUpdatePrompt.tsx  PasswordInput.tsx  RoomJoin.tsx  SidebarContent.tsx  ThemeToggle.tsx  Version.tsx
client/src/contexts/: RoomContext.tsx
client/src/desktop/: DesktopApp.tsx  clipboard-monitor.ts  desktop-api.ts  desktop-integration.tsx
client/src/hooks/: basic.test.tsx  useActivityMonitor.ts  useMediaQuery.ts  useMessageHandler.ts  useRoomManager.ts  useSocketConnection.ts  useTheme.tsx  useToast.tsx
client/src/i18n/: index.ts
client/src/lib/: utils.test.ts
client/src/pages/: SharePage.tsx
client/src/providers/: ThemeProvider.tsx
client/src/services/: shareApi.ts  socket.test.ts  socket.ts
client/src/test/: setup.ts
client/src/types/: global.d.ts  jsx.d.ts
desktop/: IMPLEMENTATION.md  README.md  package.json  test-build.sh
desktop/scripts/: build-client.js
desktop/src/: DesktopApp.tsx  clipboard-monitor.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: DOCKER_DEPLOYMENT.md  ICON_MANAGEMENT.md  README.md  RELEASE_GUIDE.md  RUST_GAP_PLAN.md  TESTING.md  TEST_PATTERNS.md  调试日志使用指南.md
scripts/: coverage-report.js  deploy.sh  generate-icons.js  release.js  sync-desktop-icons.js  version-sync.js
server/: bun.config.ts  package.json  tsconfig.json  vitest.config.ts
server-rust/: .gitignore  Cargo.toml  Dockerfile  OPTIMIZATION_PLAN.md  README.md
server-rust/src/: lib.rs  main.rs
server-rust/src/middleware/: auth.rs  mod.rs  rate_limit.rs
server-rust/src/models/: message.rs  mod.rs  room.rs  share.rs  user.rs
server-rust/src/routes/: api_info.rs  files.rs  health.rs  mod.rs  rooms.rs  share.rs
server-rust/src/services/: file_manager.rs  mod.rs  room_service.rs  share_service.rs  socket.rs
server-rust/src/utils/: device.rs  id_generator.rs  mod.rs  sanitize.rs  validation.rs
server-rust/tests/: auth_middleware_tests.rs  file_routes_tests.rs  integration_tests.rs  logger_tests.rs  rate_limit_tests.rs  room_model_tests.rs  room_service_tests.rs  rooms_routes_tests.rs  share_routes_tests.rs  share_security_tests.rs  share_service_tests.rs  socket_service_tests.rs  validation_middleware_tests.rs  xss_security_tests.rs
server-rust/tests/common/: mod.rs
server/src/: index.ts  integration.test.ts  types.ts
shared/: bun.config.ts  package.json  tsconfig.json
shared/src/: index.ts  schemas.test.ts  schemas.ts  types.ts  utils.test.ts  utils.ts
specs/001-external-file-sharing/: IMPLEMENTATION.md  T019_COMPLETION_REPORT.md  T020_COMPLETION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+89 files in other folders)
