[package]
name = "cloud-clipboard-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "Cloud Clipboard Server - Rust Implementation"
authors = ["Cloud Clipboard Team"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Socket.IO
socketioxide = { version = "0.15", features = ["state"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP/Tower middleware
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace", "limit", "set-header"] }

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Password hashing
bcrypt = "0.16"

# Base64 encoding/decoding (for Basic Auth)
base64 = "0.22"

# SHA-256 hashing for file deduplication
sha2 = "0.10"

# File type detection via magic bytes
infer = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Rate limiting
governor = "0.8"

# File handling
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }

# Random ID generation
rand = "0.9"

# URL encoding for RFC 5987 Content-Disposition
percent-encoding = "2"

# Environment
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
